--- a/index.html
+++ b/index.html
@@ -1,4 +1,5 @@
-﻿<html>
+﻿<!DOCTYPE html>
+<html>
 
   <head>
     <title>Household Change in Chicago Community Areas</title>
@@ -12,7 +13,7 @@
       html,
       body,
       #map {
-        height: 520px;
+        height: 100%;
         
       }
       
@@ -29,7 +30,7 @@
 
     </script>
 
-    <div id="map" style="width: 700px; height:573px">
+    <div id="map" style="width: 100%; height:100%">
     </div>
 
     <script>
