--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
 
     </script>
 
-    <div id="map" style="width: 635px; height:100%">
+    <div id="map" style="width: 635px; height:800px">
     </div>
 
     <script>
